[package]
name = "vector-db"
version = "0.1.0"
edition = "2024"

[dependencies]
hdf5 = { package = "hdf5-metno", version = "0.10" }
anyhow = "1"
ndarray = "0.16"
reqwest = { version = "0.12", features = ["blocking"] }
rand = "0.9"
fastembed = "5.2.0"
clap = { version = "4.5.51", features = ["derive"] }
